--- a/CapaDatos/Properties/Settings.settings
+++ b/CapaDatos/Properties/Settings.settings
@@ -5,9 +5,9 @@
     <Setting Name="cn" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Server=ED-PC\SQLEXPRESS;Database=dbbascula;User Id=sa;Password=Inventario$$;&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Server=ED\SQLEXPRESS;Database=dbbascula;User Id=sa;Password=Inventario$$;&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Server=ED-PC\SQLEXPRESS;Database=dbbascula;User Id=sa;Password=Inventario$$;</Value>
+      <Value Profile="(Default)">Server=ED\SQLEXPRESS;Database=dbbascula;User Id=sa;Password=Inventario$$;</Value>
     </Setting>
   </Settings>
 </SettingsFile>
